1998-03-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* std11.el: Require 'std11-parse when compile.

1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* calist.el (ctree-match-calist): Prefer normal choice than
	default choice.

1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-x20.el (mime-charset-decoder-alist): New variable.
	(decode-mime-charset-region-default): New function.
	(mime-iso646-character-unification-alist): New variable.
	(mime-unified-character-face): New variable.
	(decode-mime-charset-region-with-iso646-unification): New
 	function.
	(decode-mime-charset-region): Use 'mime-charset-decoder-alist.

1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-20.el (mime-charset-coding-system-alist): Use 'defcustom.

1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-20.el: Require 'wid-edit when compile.


1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 7.5 was released.

1998-03-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* calist.el (calist-field-match-method-obarray): New variable.
	(define-calist-field-match-method): New function.
	(calist-default-field-match-method): New function.
	(calist-field-match-method): New function.
	(calist-field-match): New function.
	(ctree-match-calist): Use `calist-field-match'.


1998-03-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 7.4 was released.

1998-03-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-nemacs.el, emu-mule.el, emu-e19.el, emu-x20.el, emu-e20.el
	(insert-file-contents-as-binary): Renamed from
	`insert-binary-file-contents'; add `insert-binary-file-contents'
	as obsolete alias.

1998-03-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-e20.el (insert-binary-file-contents-literally): New alias
	for `insert-file-contents-literally'.

	* emu-x20.el (insert-binary-file-contents-literally): Moved from
	emu-20.el.

	* emu-20.el: Move `insert-binary-file-contents-literally' to
	emu-x20.el.
