@@ -204,6 +204,10 @@ find-file-hooks, etc.
 ;;; @ character
 ;;;
 
+(defmacro char-next-index (char index)
+  "Return index of character succeeding CHAR whose index is INDEX."
+  `(1+ index))
+
 ;;; @@ Mule emulating aliases
 ;;;
 ;;; You should not use them.
