@@ -1,3 +1,8 @@
+1998-04-09  MORIOKA Tomohiko  <morioka@mousai.jaist.ac.jp>
+
+	* emu-e20.el, emu-x20.el, emu-e19.el, emu-mule.el, emu-nemacs.el
+	(char-next-index): New macro.
+
 1998-03-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* std11.el: Require 'std11-parse when compile.
